--- a/snippets/icon-cart.liquid
+++ b/snippets/icon-cart.liquid
@@ -1,48 +1,22 @@
-<!-- Create a new file named icon-cart.liquid -->
-{%
-import {
-  CartIcon
-} from '@shopify/polaris-icons';
-%}
+<li class="list-inline-item">
+    <button
+    type="button"
+    onclick="headerCartPopup()"
+    title="Cart button"
+    class="header__icon text-center relative">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon icon-cart w-10"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
+        <span class="site-header__cart-count">{{ cart.item_count }}</span>
+    </button>
+</li>
 
-    <li class="list-inline-item EE">
-        <a href="/cart">
-            <span class="icon icon--cart">
-                <Icon
-  source={CartIcon}
-  tone="base"
-/>
-                <i class="fa fa-shopping-cart"></i>
-                <span class="site-header__cart-count">{{ cart.item_count }}</span>
-            </span>
-        </a>
-    </li>
-
-
-{% comment %} <script>
-    $(document).ready(function() {
-        // Update cart on hover
-        $('#cart').load('/cart #cart', function() {
-        // Reinitialize any scripts that were in the updated content
-        });
-
-        // Handle adding items to cart
-        $('.add-to-cart').on('click', function(event) {
-        event.preventDefault();
-        var $addToCartForm = $(this).closest('form');
-        var formData = $addToCartForm.serialize();
-
-        $.ajax({
-            type: 'POST',
-            url: '/cart/add.js',
-            data: formData,
-            dataType: 'json',
-            success: function() {
-            $('#cart').load('/cart #cart', function() {
-                // Reinitialize any scripts that were in the updated content
-            });
-            }
-        });
-        });
-    });
-</script> {% endcomment %}
+<style>
+    button.header__icon.text-center.relative {
+        display: block;
+        cursor: pointer;
+        outline: none;
+        background: transparent;
+    }
+    button.header__icon.text-center.relative svg {
+        cursor: pointer;
+    }
+</style>
