--- a/snippets/cart-form.liquid
+++ b/snippets/cart-form.liquid
@@ -1,25 +1,22 @@
 <form action="{{ routes.cart_url }}" method="post" class="h-full relative">
-
     <div class="flex justify-between items-center pb-3 pt-3 bg-white px-4 md:px-4">
         <h3 class="text-base font-semibold">
-            {{ 'general.cart.title' | t }}
+            Your cart
             {% if cart.item_count > 0 %}
                 <span>({{ cart.item_count | json }})</span>
             {% endif %}
         </h3>
-        <button type="button" title="{{ 'general.cart.continue_shopping' | t }}" class="text-base text-right font-medium p-1" @click="$dispatch('toggle-cart')">
-            {{ 'general.cart.continue_shopping' | t }}
-        </button>
+        <button type="button" title="Continue shopping" class="text-base text-right font-medium p-1">Continue shopping</button>
     </div>
 
     <div class="mt-6 relative flex-1 px-4 sm:px-6 h-full">
         {% if cart.item_count > 0 %}
-        <div class="flex flex-col overflow-y-scroll justify-between h-full pb-28 font-medium no-scrollbar relative">
+        <div class="flex flex-col justify-between h-full pb-28 font-medium no-scrollbar relative">
             {% assign total_savings = 0 %}
             <div class="">
                 {% for item in cart.items %}
                     <div class="cart-item">
-                        <div class="flex py-3 border-color w-full items-center md:items-start relative 
+                        <div class="flex py-3 border-color w-full items-center md:items-start relative
                             {% unless forloop.last %} border-b border-gray-400 {% endunless %}">
                             <div class="w-4/12">
                                 {% if item.image %}
@@ -28,16 +25,15 @@
                                     {{ 'product-1' | placeholder_svg_tag: 'placeholder-svg' }}
                                 {% endif %}
                             </div>
-    
+
                             <div class="w-8/12">
-    
                                 <h3 class="text-base w-10/12">
                                     <a href="{{ item.url }}" title="{{ item.product.title }}" class="w-5/6">{{ item.product.title }}</a>
                                 </h3>
-    
+
                                 {% if item.line_level_discount_allocations.size > 0 %}
                                     {% assign item_discount = item.original_price | minus: item.price %}
-    
+
                                     <div class="font-medium text-gray-500 mt-2">
                                         <span class="money text-red-700">
                                             {{ item.price | money_with_currency }}
@@ -46,7 +42,7 @@
                                             {{ item.original_price | money_with_currency }}
                                         </s>
                                     </div>
-    
+
                                     {% for discount_allocation in item.line_level_discount_allocations %}
                                         <div class="text-xs font-bold text-green-700 mt-2">
                                             <i>{{ discount_allocation.discount_application.title }}</i>
@@ -77,11 +73,11 @@
                                         </span>
                                     </div>
                                 {% endif %}
-                                
+
                                 {% if item.variant.title != 'Default Title' and item.variant.title != 'No Color / OS' and item.variant.title != 'NC / OS' %}
                                     <div class="w-full flex-none text-xs font-medium text-gray-500 mt-2">{{ item.variant.title }}</div>
                                 {% endif %}
-                                
+
                                 <div class="flex w-5/6 md:w-1/2 mt-2" x-data="{ qty: {{ item.quantity }}}">
                                     <button type="button"
                                          title="decrease quantity"
@@ -90,35 +86,33 @@
                                         &minus;
                                     </button>
                                     <input class="text-center bg-white border-t border-b border-gray-600 w-6/12 border-l-0 border-r-0" type="text" type="number" min="1" size="2" value="{{ item.quantity }}" name="quantity">
-    
-                                    <button type="button" 
-                                        title="increase quantity" 
+
+                                    <button type="button"
+                                        title="increase quantity"
                                         @click.debounce="loading = true; Sunrise.updateQuantity({{ forloop.index }}, ++qty)"
                                         class="text-center cursor-pointer  p-1 border border-gray-600 w-3/12">
                                         &plus;
                                     </button>
                                 </div>
-                                
+
                             </div>
-    
-                            <button type="button" 
+
+                            <button type="button"
                                 title="remove {{ item.product.title }}"
                                 @click="loading = true; Sunrise.updateQuantity({{ forloop.index }}, 0)"
                                 class="w-5 h-5 cursor-pointer flex items-center justify-center absolute right-0 top-3 rounded-full bg-gray-300">
-                                {% render 'icon-close', class: 'w-3' %}
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon icon-close w-3"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
                             </button>
-    
                         </div>
-                    </div>  
+                    </div>
                 {% endfor %}
             </div>
+
             <div class="max-w-xs md:max-w-md w-full bg-white border-t-2 border-gray-600 fixed bottom-0 right-0 p-4">
-
-
                 {%- if cart.cart_level_discount_applications.size > 0 -%}
                     <div class="total-discounts flex justify-between font-medium pb-2  text-green-700" aria-label="{{ 'customer.order.discount' | t }}">
                         {%- for discount in cart.cart_level_discount_applications -%}
-                            <i class="flex space-x-1"> 
+                            <i class="flex space-x-1">
                                 {% render 'icon-discount', class: 'w-4 mr-1' %}
                                 <span>{{ discount.title }} </span>
                             </i>
@@ -129,32 +123,29 @@
 
                 {% if total_savings > 0 %}
                     <div class="sub-total flex justify-between text-base pb-2  text-red-700">
-                        <span> {{ 'general.cart.saving' | t }}</span>
+                        <span>Subtotal: </span>
                         <span>-{{ total_savings | money_with_currency }}</span>
                     </div>
                 {% endif %}
-    
+
                 <div class="sub-total flex justify-between text-base pb-2">
-                    <span> {{ 'general.cart.subtotal' | t }}</span>
+                    <span>Subtotal: </span>
                     <span>{{ cart.total_price | money_with_currency }}</span>
                 </div>
 
-    
                 <button name="checkout" type="submit" class="w-full text-sm px-5 py-2 flex justify-center items-center text-center button__primary cursor-pointer mt-2">
-                    {{ 'general.cart.checkout' | t }}
+                    Checkout
                 </button>
-    
             </div>
         </div>
         {% else %}
             <div class="empty-cart text-center max-w-xs md:max-w-md px-4">
-                {% render 'icon-cart', class: 'mx-auto w-8 h-8' %}
-                <h4 class="text-lg heading-font py-2 !font-bold"> {{ 'general.cart.cart_empty_title_html' | t }} </h4>
-                <button @click="$dispatch('toggle-cart')" type="button" class="inline-block mx-auto px-8 py-2 text-sm text-center  w-full font-medium">
-                    {{ 'general.cart.continue_shopping' | t }}
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon icon-cart w-10"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
+                <h4 class="text-lg heading-font py-2 !font-bold">Your cart is Empty</h4>
+                <button type="button" class="inline-block mx-auto px-8 py-2 text-sm text-center  w-full font-medium">
+                    Continue Shopping
                 </button>
             </div>
         {% endif %}
     </div>
-
 </form>
